# KungFuChess

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  error.hpp  main.cpp  main_client.cpp  main_gui.cpp  main_server.cpp
.claude/: settings.json
.claude/skills/workflow/: SKILL.md
App/: CommandParser.cpp  CommandParser.hpp  CommandRunner.cpp  CommandRunner.hpp
Business Logic/: Board.cpp  Board.hpp  BoardParser.cpp  BoardParser.h  BoardParser.hpp  BoardRenderer.cpp  BoardRenderer.hpp  Game.cpp  Game.h  Game.hpp  MoveRules.cpp  MoveRules.hpp  Piece.cpp  Piece.hpp  PieceConstants.hpp  PieceRegistry.cpp  PieceRegistry.hpp  PieceTypes.h  Pieces.cpp  Pieces.hpp
app/: composition.hpp
build64/: .ninja_deps  .ninja_log  build.ninja
bus/: event_bus.hpp
client/app/: auth_flow.cpp  auth_flow.hpp  client_app.cpp  client_app.hpp  composition.cpp  composition.hpp  controller_factory.hpp  network_session.cpp  network_session.hpp
client/input/: controller.cpp  controller.hpp  engine_command_sink.hpp  lobby_mapper.cpp  lobby_mapper.hpp  network_command_sink.hpp  network_lobby_sink.hpp  text_prompt_buffer.cpp  text_prompt_buffer.hpp
client/view/: board_geometry.cpp  board_geometry.hpp  countdown_overlay.cpp  countdown_overlay.hpp  lobby_layout.cpp  lobby_renderer.cpp  lobby_renderer.hpp  lobby_snapshot.hpp  panel_layout.cpp  panel_layout.hpp  renderer.cpp  renderer.hpp  resize_watcher.cpp  resize_watcher.hpp  text.cpp  text.hpp  text_prompt.cpp  text_prompt.hpp  theme.hpp  window.cpp  window.hpp
client/view/screens/: lobby_layout.hpp  lobby_renderer.cpp  lobby_renderer.hpp  lobby_snapshot.hpp  rating_tier.cpp  rating_tier.hpp  screen_chrome.cpp  screen_chrome.hpp  screen_layout.cpp  screen_layout.hpp  text_prompt.cpp  text_prompt.hpp
common/: logger.cpp  logger.hpp
engine/: game_engine.cpp  game_engine.hpp  game_events.hpp  game_observer.hpp
images/: img.cpp  img.hpp
images/pieces1/KW/states/short_rest/: config.json
images/pieces2/BB/states/long_rest/: config.json
images/pieces3/PB/states/idle/: config.json
images/pieces3/PB/states/long_rest/: config.json
images/pieces3/PW/states/jump/: config.json
images/pieces3/RW/states/move/: config.json
images/pieces3/RW/states/short_rest/: config.json
input/: board_mapper.cpp  board_mapper.hpp  command_sink.hpp  controller.cpp  controller.hpp
io/: board_parser.cpp  board_parser.hpp  board_printer.cpp  board_printer.hpp  parse_error.hpp  piece_codec.cpp  piece_codec.hpp  piece_config.cpp
logic/engine/: game_engine.cpp  game_engine.hpp
logic/io/: board_parser.hpp  move_notation.cpp  move_notation.hpp  piece_codec.cpp  piece_config.hpp  text.hpp
logic/model/: game_state.hpp  piece.cpp  piece.hpp  piece_cost.cpp
logic/product/: game_state_view.cpp  move_log.hpp  score_board.cpp
logic/realtime/: real_time_arbiter.cpp  real_time_arbiter.hpp
logic/rules/: piece_rules.cpp  rule_engine.cpp
model/: board.cpp  board.hpp  errors.hpp  game_state.hpp  geometry.cpp  geometry.hpp  piece.cpp  piece.hpp  piece_cost.hpp  position.cpp  position.hpp
net/: net_deps_check.cpp  transport.hpp  websocketpp_transport.cpp  websocketpp_transport.hpp
product/: game_state_view.hpp  move_log.cpp  move_log.hpp  score_board.cpp  score_board.hpp
protocol/: json_codec.cpp  json_codec.hpp  messages.hpp  position_codec.cpp  wire_snapshot.cpp  wire_snapshot.hpp
realtime/: motion.cpp  motion.hpp  real_time_arbiter.cpp  real_time_arbiter.hpp
rules/: piece_rules.cpp  piece_rules.hpp  rule_engine.cpp  rule_engine.hpp
scripts/: demo.vpl
server/: command_queue.cpp  command_queue.hpp  elo.cpp  elo.hpp  game_session.cpp  game_session.hpp  matchmaker.cpp  matchmaker.hpp  password_hash.cpp  password_hash.hpp  player_names.cpp  player_names.hpp  room_registry.cpp  room_registry.hpp  scheduler.cpp  scheduler.hpp  server_app.cpp  server_app.hpp  session.hpp  session_manager.cpp  session_manager.hpp  sqlite_user_store.cpp  sqlite_user_store.hpp  user_store.hpp
shared/net/: transport.hpp  websocketpp_transport.cpp
shared/protocol/: json_codec.cpp  messages.hpp  position_codec.hpp  wire_snapshot.cpp
tests/: test_main.cpp
tests/unit/: fake_transport.hpp  fake_user_store.hpp  test_board.cpp  test_board_geometry.cpp  test_board_mapper.cpp  test_board_parser.cpp  test_board_printer.cpp  test_command_queue.cpp  test_controller.cpp  test_countdown_overlay.cpp  test_elo.cpp  test_event_bus.cpp  test_game_engine.cpp  test_game_session.cpp  test_game_snapshot.cpp  test_game_state_view.cpp  test_lobby_mapper.cpp  test_matchmaker.cpp  test_move_log.cpp  test_move_notation.cpp  test_network_command_sink.cpp  test_network_lobby_sink.cpp  test_panel_layout.cpp  test_password_hash.cpp  test_piece.cpp  test_piece_config.cpp  test_piece_cost.cpp  test_piece_rules.cpp  test_player_names.cpp  test_position.cpp  test_protocol.cpp  test_rating_tier.cpp  test_real_time_arbiter.cpp  test_resize_watcher.cpp  test_room_registry.cpp  test_rule_engine.cpp  test_scheduler.cpp  test_score_board.cpp  test_screen_layout.cpp  test_script_parser.cpp  (+5 more)
texttests/: script_parser.cpp  script_parser.hpp  script_runner.cpp  script_runner.hpp  start.txt
view/: board_geometry.cpp  board_geometry.hpp  game_snapshot.cpp  game_snapshot.hpp  image_view.cpp  image_view.hpp  panel_layout.cpp  renderer.cpp  renderer.hpp  sprite_library.cpp  sprite_library.hpp  view_demo.cpp  window.hpp
